--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .logo {
-  height: 150px;
+  height: 70px;
   width: 200x;
 }
 
@@ -71,7 +71,6 @@ body {
   font-weight: bold;
   position: relative;
   padding-bottom: 5px;
-  text-transform: uppercase;
 }
 
 .heading_container h2::before {
@@ -127,6 +126,14 @@ body {
   background-size: cover;
 }
 
+.navbar {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 52%;
+  max-height: 80px;
+}
+
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item .nav-link {
   margin: 10px 30px;
   padding: 0;
@@ -134,8 +141,7 @@ body {
   color: #ffffff;
   text-align: center;
   position: relative;
-  text-transform: uppercase;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item .nav-link::after {
